--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <calculator />
+   
   </body>
+    
+    <script>
+import calculator from './components/calculator.vue'
+export default {
+  name: 'App',
+  components: {
+    calculator
+  }
+}
+</script>
+     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </html>
