--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
-    <calculator />
-   
-  </body>
+    <div id="app"></div>
+    <div class="display"></div>
+
+    <div class="error" style="display: none;">Ошибка</div>
+    <div class="keyboard"></div>
+    <div class="container">
+      <canvas id="myChart" width="600" height="400"></canvas>
+ </div>
     
-    <script>
-import calculator from './components/calculator.vue'
-export default {
-  name: 'App',
-  components: {
-    calculator
-  }
-}
-</script>
-     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <script type="text/javascript" src="/.js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="http://localhost:8098"></script>
+  </body>
 </html>
